cluster/core/storage/rook-ceph/cluster/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-rook
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`rook.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: crowdsec-traefik-bouncer
        - name: rfc1918
        # - name: basicauth
      services:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
